jms/1.9/modules/ROOT/pages/jms-listener.adoc
= Listen for New Messages Using the JMS Connector
:keywords: jms, connector, consume, message, source, listener
:page-aliases: connectors::jms/jms-listener.adoc

Anypoint Connector for JMS (JMS Connector) *On New Message* source enables you to listen for and consume new messages as they arrive at the specified destination.

[Note]
If you use JMS Connector with Oracle JMS, the *On New Message* source receives new messages with a delay of 1 to 10 seconds in between based on the frequency of messages. Control this behavior using `-Doracle.jms.maxSleepTime=xxxx`. For further details, see https://forums.oracle.com/ords/apexds/post/jms-client-receives-aq-messages-asynchronously-with-a-delay-1125[JMS client receives AQ messages asynchronously with a delay of 15 seconds^] 


== Listen for New Messages from a Queue

In the following example, you configure the *On New Message* source to listen for new messages in the queue specified in the *Destination* field. The operation returns a Mule message each time a JMS message is available in the queue. The Mule message consists of:

* The message content as payload
* The message metadata in the message attributes

By default, the message consumed is acknowledged ("ACKed") only when the execution of the flow receiving the message completes successfully. If instead, an error occurs during the execution of the flow, the session recovers, and the message is redelivered.

To configure the source in Studio, follow these steps:

. In the *Mule Palette* view, select *JMS > On New Message*.
. Drag *On New Message* to the Studio canvas.
. In the *On New Message* configuration screen, optionally change the value of the *Display Name* field.
. In the *On New Message* configuration screen, in *Destination*, specify the name of the destination from which to consume the message, for example, `#[vars.destination]`.

.JMS Connector On New Message on Queue configuration
image::jms-onnewmessage-queue.png[In the On New Message source screen, set the Destination field to the name of the destination from where to consume the message]

In the XML editor, the `<jms:listener>` configuration looks like this:

[source,xml,linenums]
----
<jms:listener config-ref="config" destination="#[vars.destination]"/>
----

== Listen for New Messages from a Topic Subscription

In the following example, you configure the *On New Message* source to listen for new messages from a topic subscription by setting the *Consumer type* field to *Topic consumer*.

To configure the source in Studio, follow these steps:

. In the *Mule Palette* view, select *JMS > On New Message*.
. Drag *On New Message* to the Studio canvas.
. In the *On New Message* configuration screen, optionally change the value of the *Display Name* field.
. In the *On New Message* configuration screen, in *Destination*, specify the name of the destination from which to consume the message for example `#[vars.destination]`.
. Set the *Consumer type* field to *Topic consumer*:

.JMS Connector On New Message on Topic subscription configuration
image::jms-onnewmessage-topic.png[In the On New Message source screen, set the Destination field and the Consumer Type field to Topic consumer]

In the XML editor, the `<jms:listener>` and `<jms:topic-consumer/>` configuration looks like this:

[source,xml,linenums]
----
<jms:listener config-ref="JMS_config" destination="#[vars.destination]">
    <jms:consumer-type>
        <jms:topic-consumer/>
    </jms:consumer-type>
</jms:listener>
----


== Filter Incoming Messages

JMS Connector supports filtering messages to consume based on the standard JMS selector language you specify in the *Selector* field of the *On New Message* source. By doing so, you receive only the messages matching the selector language, ignoring any other messages in the destination.

In the following example, you configure the *Selector* field to filter messages that matches to a specific header priority queue:

. In Studio, select the *On New Message* source from your flow.
. Set the *Destination* field to `openTickets`.
. Set the *Selector* field to `JMSPriority=8`. +

.JMS Connector On New Message Filtering messages
image::jms-onnewmessage-selector.png[In the On New Message source screen, set the Selector field to filter incoming messages]

In the XML editor, the `selector` configuration looks like this:

[source,xml,linenums]
----
<flow name="consumer">
    <jms:listener config-ref="JMS_config" destination="openTickets" selector="JMSPriority=8"/>
</flow>
----

== Reply to Incoming Messages

When an incoming JMS message declares a `ReplyTo` header destination and the message is processed successfully without errors, the *On New Message* source automatically produces a response, and the connector publishes the response to the destination specified in the *Destination* field.

In the following example, you configure the response message section of the operation:

. In Studio, select the *On New Message* source from your flow.
. In the *Response* section, set the *Ignore Jms replyTo Header* to *True*, which disables the automatic reply.
. Set the *Body* field to `'Message received was: ' ++ payload`.
. Set the *User Properties* field to `{'processedAt': now}`.
. Set the *Persistent delivery* to *True*.
. Set the *Priority* field to `8`.

.JMS Connector On New Message Response configuration
image::jms-onnewmessage-response.png[In the On New Message source screen, configure the Response section fields]

In the XML editor, the `ignoreReplyTo`, `body`, `properties`, `persistentDelivery`, and `priority` configurations looks like this:

[source,xml,linenums]
----
<jms:listener config-ref="config" destination="#[vars.destination]">
  <jms:response priority="8" persistentDelivery="true" ignoreReplyTo="true">
      <jms:body>#['Message received was: ' ++ payload]</jms:body>
      <jms:properties>#[{'processedAt': now}]</jms:properties>
  </jms:response>
</jms:listener>
----

== Configure the Number of Consumers

When you need extra processing power, configure the *Number of consumers* field to the number of consumers that the *On New Message* source uses to consume messages concurrently. +
By default, each source uses `4` consumers that produce messages concurrently. Each consumer waits for the message to be processed, which means that you have a maximum of `4` messages in-flight at the same time.

In the following example, you increase the number of consumers in the source:

. In Studio, select the *On New Message* source from your flow.
. Increase the *Number of consumers* field from `4` to the number of concurrent consumers that receives the JMS messages, for example, `6`:

.JMS Connector On New Message Number of Consumers
image::jms-onnewmessage-consumers.png[In the On New Message source screen, set the Number of consumers field to a number of concurrent consumers]

In the XML editor, the `numberOfConsumers` configuration looks like this:

[source,xml,linenums]
----
<jms:listener doc:name="On New Message" destination="#[vars.destination]" numberOfConsumers="6"/>
----

== Configure Mime Types and Encoding

JMS Connector determines a message’s mime type (`contentType`) based on the `MM_MESSAGE_CONTENT_TYPE` property. However, when you must manage the message's content, configure the *Inbound Content-Type* field to the particular content type value you need. +

By default, JMS Connector assumes that Mule runtime engine default encoding matches the encoding in the message if no other information is provided. Use the *Inbound Encoding* field to configure a different type of encoding.

In the following example, you configure the inbound content-type and encoding:

. In Studio, select the *On New Message* source from your flow.
. Set the *Inbound Content-Type* field to `application/JSON`.
. Set the *Inbound Encoding* field to `UTF-8`.

.JMS Connector On New Message Content-Type and Encoding
image::jms-onnewmessage-types-encoding.png[In the On New Message source screen, set the Number of consumers field to a number of concurrent consumers]

In the XML editor, the `inboundContentType` and `inboundEncoding` configuration looks like this:

[source,xml,linenums]
----
<jms:listener doc:name="On New Message" destination="#[vars.destination]" numberOfConsumers="6" inboundContentType="application/JSON" inboundEncoding="UTF-8"/>
----

== See Also

* xref:jms-consume.adoc[Consume Messages]
* xref:jms-topic-subscription.adoc[Configure Topic Subscriptions]
* xref:jms-ack.adoc[Manage Message Acknowledgement]
